Add Update Intersection (PATCH) endpoint
