# api-gateway/internal/model/intersection.go
@@ -39,6 +39,15 @@ type CreateIntersectionResponse struct {
 	Id string `json:"id" example:"2"`
 }
 
+type UpdateIntersectionRequest struct {
+	Name    string `json:"name" example:"My Updated Intersection"`
+	Details struct {
+		Address  string `json:"address"  example:"Corner of Foo and Bar"`
+		City     string `json:"city"     example:"Pretoria"`
+		Province string `json:"province" example:"Gauteng"`
+	} `json:"details"`
+}
+
 type optimisationParameters struct {
 	OptimisationType     string               `json:"optimisation_type" example:"grid_search"`
 	SimulationParameters simulationParameters `json:"simulation_parameters"`
